Improved parsing medicaments and interventions

--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -32,9 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "pathDataIds = 'Venezolanas'\n",
+    "pathDataIds = 'Venezolanas2'\n",
     "procedimientosDesc = pandas.read_csv(os.path.join(pathDataIds, 'procedimientosID.csv'), index_col = 0)\n",
-    "registrosByCaso = registros.groupby('Caso')\n",
     "\n",
     "diagnosticos = pandas.read_csv(os.path.join(pathDataIds, 'diagnosis.csv'), index_col = 0)\n",
     "#medicamentos = pandas.read_csv(os.path.join(pathDataIds, 'medicamentos.csv'), index_col = 0)"
@@ -48,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "pathFolder = 'Venezolanas'\n",
+    "pathFolder = 'Casos2019'\n",
     "casos = pandas.read_csv(pathFolder + '/casos.csv', index_col = 0)\n",
     "pacientes = pandas.read_csv(pathFolder + '/pacientes.csv', index_col = 0)\n",
     "pacientes.index = pacientes.index.map(str)\n",
@@ -59,6 +58,7 @@
     "#diagnosis = pandas.read_csv('Venezolanas2/diagnosis.csv', index_col = 0)\n",
     "procedimientos = pandas.read_csv(pathFolder + '/procedimientos.csv', index_col = 0)\n",
     "procedimientos.index = procedimientos.index.map(str)\n",
+    "registrosByCaso = registros.groupby('Caso')\n",
     "\n",
     "entriesInfirmery = pandas.read_csv(pathFolder + '/enfermeriaMedidas.csv', index_col = 0)\n",
     "entriesInfirmeryByCase = entriesInfirmery.groupby('IdAdmision')"
@@ -67,14 +67,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "classificationProcedures = {'H2968': 'o', 'H2123' : 'o', 'H0165': 'o', 'H0193': 'o', 'H2120': 'o', 'H2379': 'o', 'H2383': 'o', 'H2386': 'o', 'H2407': 'o', 'H2415': 'o', 'H2595': 'o', 'H2684': 'o', 'H2849': 'o', 'H2852': 'o', 'H2880': 'o', 'H2882': 'o', 'H2884': 'o', 'H2892': 'o', 'H2901': 'o', 'H2904': 'o', 'H2910': 'o', 'H2916': 'o', 'H2959': 'o', 'H2963': 'o', 'H2974': 'a', 'H2975': 'a', 'H3038': 'o', 'H3065': 'o', 'H3066': 'o', 'H3078': 'o', 'H3089': 'p', 'H3092': 'p', 'H3094': 'p', 'H3099': 'a', 'H3100': 'a', 'H3108': 'o', 'H3109': 'o', 'H3111': 'o', 'H3114': 'o', 'H3118': 'o', 'H4421': 'o', 'H4494': 'o', 'H4496': 'o', 'HE020': 'o'}\n",
-    "classificationProcedures['H2962'] = 'o'\n",
-    "classificationProcedures.update({'H2938': 'o', 'H2952': 'o', 'H3030': 'o', 'H2392': 'o', 'H3046': 'o', 'H2982': 'o', 'H2834': 'o', 'H2966': 'o', 'H2937': 'o', 'H2885': 'o', 'H2948': 'o', 'H2408': 'o', 'H2911': 'o', 'H4372': 'o', 'H3008': 'o', 'H2981': 'o', 'H2847': 'o', 'H2840': 'o', 'H2965': 'o', 'H0004': 'o', 'H2410': 'o', 'H2271': 'o', 'H2977': 'o', 'H3052': 'o', 'H2955': 'o', 'H2927': 'o', 'H3031': 'o', 'H2835': 'o', 'H3082': 'o', 'H2946': 'o', 'H3002': 'o', 'H2932': 'o', 'H2913': 'o', 'H3085': 'o', 'H2274': 'o', 'H2918': 'o', 'H3077': 'o', 'H1099': 'o', 'H2953': 'o', 'H4447': 'o', 'H3029': 'o', 'H2964': 'o', 'H3014': 'o', 'H3075': 'o', 'H2705': 'o', 'H3059': 'o', 'H2888': 'o', 'H6783': 'o', 'H2853': 'o', 'H2382': 'o', 'H3116': 'o', 'H2883': 'o', 'H4495': 'o', 'H3070': 'o', 'H2957': 'o', 'H2970': 'o', 'H2221': 'o', 'H3067': 'o', 'H3032': 'o', 'H2121': 'o', 'H3001': 'o', 'H3113': 'o', 'H2874': 'o', 'H2954': 'o', 'H4417': 'o', 'H2926': 'o', 'H2582': 'o', 'H2917': 'o'})"
+    "from parsingData.procedures import classificationProcedures"
    ]
   },
   {
@@ -210,7 +206,27 @@
     "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado2Salida',xml)]\n",
     "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoRelacionado3Salida',xml)]\n",
     "    diagnosisSalida += [parsingDatabaseUtils.findInXML('CodigoDiagnosticoPrincipalSalida',xml)]\n",
-    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))"
+    "    return list(map(lambda s: s.strip(), filter(lambda s:  s, diagnosisSalida +  diagnosisEntrada)))\n",
+    "\n",
+    "from html.parser import HTMLParser\n",
+    "pars =HTMLParser()\n",
+    "\n",
+    "def parseMedicamentsInterventionsByDay(txt):\n",
+    "    txt = pars.unescape(txt)\n",
+    "    res = {}\n",
+    "    d = txt.split('Fecha:')\n",
+    "    for dayTxt in d:\n",
+    "        date = re.findall('^\\s*([0-9]+/[0-9]+/[0-9]+)',dayTxt)\n",
+    "        if not date:\n",
+    "            continue\n",
+    "        date = date[0]\n",
+    "        res[date] = re.findall('^-([0-9a-zA-Z-]+) -(.*?)- Cantidad: ([0-9]+)', dayTxt,  re.MULTILINE)\n",
+    "    return res\n",
+    "def getMedicamentsInterventionsFromEpicrisis(epi):\n",
+    "    et = ET.fromstring(epi.RegistroXML)\n",
+    "    medTxt =parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et)\n",
+    "    procTxt = parsingDatabaseUtils.findInXML('ProcedimientosAsociados', et)\n",
+    "    return parseMedicamentsInterventionsByDay(medTxt), parseMedicamentsInterventionsByDay(procTxt)"
    ]
   },
   {
@@ -396,14 +412,40 @@
    },
    "outputs": [],
    "source": [
-    "import parseDiagnosis\n",
+    "from parsingData import parseDiagnosis\n",
+    "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
+    "\n",
     "importlib.reload(parseDiagnosis)\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
     "    if len(p.registrosRecienNacido) > 1:\n",
     "        print('Warning! I still cannot handle twins')\n",
     "        continue\n",
     "    s = getAllDiagnosis(p.epicrisis)\n",
-    "    resSIP[c].update(parseDiagnosis.parseDiagnosis(s))"
+    "    s = [parsingDatabaseUtils.remove_diacritics(pars.unescape(ss)) for ss in s]\n",
+    "    resSIP[c].update(parseWithDictionary.parseWithDictionary(s, parseDiagnosis.actionsDiagnosis))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
+    "importlib.reload(parseMedicaments)\n",
+    "#Parse medicaments and interventions\n",
+    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    if len(p.registrosRecienNacido) > 1:\n",
+    "        print('Warning! I still cannot handle twins')\n",
+    "        continue\n",
+    "    m, i = getMedicamentsInterventionsFromEpicrisis(p.epicrisis)\n",
+    "    for k, v in m.items():\n",
+    "        v = [vv[0] for vv in v]\n",
+    "        resSIP[c].update(parseWithDictionary.parseWithDictionary(v, parseMedicaments.actionMedicament))\n",
+    "        \n",
+    "    for k, v in i.items():\n",
+    "        v = [vv[0] for vv in v]\n",
+    "        resSIP[c].update(parseWithDictionary.parseWithDictionary(v, parseInterventions.actionIntervention))"
    ]
   },
   {
@@ -432,6 +474,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfResSIP['MEOW']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
@@ -440,6 +491,74 @@
     "# Tests\n",
     "\n",
     "From here on, it is "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allMedicaments = {}\n",
+    "allInterventions = {}\n",
+    "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
+    "    m, i = getMedicamentsInterventionsFromEpicrisis(p.epicrisis)\n",
+    "    \n",
+    "    for _, v in m.items():\n",
+    "        for c, desc, _ in v:\n",
+    "            allMedicaments[c] = desc\n",
+    "            \n",
+    "    for _, v in i.items():\n",
+    "        for c, desc, _ in v:\n",
+    "            allInterventions[c] = desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('parseMedicaments.py', 'w') as f:\n",
+    "    f.write('actionMedicament = {} \\n')\n",
+    "    for k, v in allMedicaments.items():\n",
+    "        f.write('actionMedicament[\"%s\"] = \"\" #%s\\n' % (k, parsingDatabaseUtils.remove_diacritics(v)))\n",
+    "        \n",
+    "with open('parseInterventions.py', 'w') as f:\n",
+    "    f.write('actionIntervention = {} \\n')\n",
+    "    for k, v in allInterventions.items():\n",
+    "        f.write('actionIntervention[\"%s\"] = \"\" #%s\\n' % (k, parsingDatabaseUtils.remove_diacritics(v)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parseMedicamentsInterventionsByDay(parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "et = ET.fromstring(p.epicrisis.RegistroXML)\n",
+    "parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et)\n",
+    "print(parsingDatabaseUtils.findInXML('ProcedimientosAsociados', et))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "import parseDiagnosis"
    ]
   },
   {
@@ -474,23 +593,12 @@
    },
    "outputs": [],
    "source": [
-    "import parseDiagnosis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
     "for a in sorted(allDiagnosis):\n",
     "    #if a in actionsDiagnosis:\n",
     "    #    pass\n",
     "    if a not in diagnosticos.index:\n",
     "        continue \n",
-    "    if a in parseDiagnosis.actionsDiagnosis:\n",
+    "    if False and a in parseDiagnosis.actionsDiagnosis:\n",
     "        print(\"actionsDiagnosis['%s'] = '%s' #%s\"% (a,parseDiagnosis.actionsDiagnosis[a], diagnosticos.loc[a, 'dfg']))\n",
     "    else: \n",
     "        print(\"actionsDiagnosis['%s'] = '' #%s\"% (a,diagnosticos.loc[a, 'dfg']))\n"
@@ -813,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
