Added the option to obtain a cleaner datbase with the correct values

--- a/databaseFun.ipynb
+++ b/databaseFun.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"SELECT * FROM Casos WHERE Paciente IN ( SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%')\"\n"
+    "sql = \"SELECT * FROM Casos WHERE Paciente IN ( SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VE%')\"\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sqlVenezolanas = \"SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%'\"\n",
+    "sqlVenezolanas = \"SELECT Id FROM Pacientes WHERE Identificacion LIKE 'V%'\"\n",
     "def downloadPatientsAndRegistersFromPatients(cnxn, sqlPatients, pathWriteFolder):\n",
     "    \"\"\"\n",
     "    Downloads  all the cases, registers and operations between two dates, plus/minus a certain slack to ensure all registers are fully recovered\n",
@@ -83,7 +83,7 @@
     "    writeInChunks(os.path.join(pathWriteFolder,'procedimientos.csv'), sqlProcedimientos, cnxn)\n",
     "    writeInChunks(os.path.join(pathWriteFolder,'pacientes.csv'), sqlPacientes, cnxn)\n",
     "    writeInChunks(os.path.join(pathWriteFolder,'enfermeriaMedidas.csv'), sqlDatosEnfermeria, cnxn)\n",
-    "downloadPatientsAndRegistersFromPatients(cnxn, sqlVenezolanas, 'Venezolanas2')"
+    "downloadPatientsAndRegistersFromPatients(cnxn, sqlVenezolanas, 'Venezolanas3')"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "cnxn = pyodbc.connect('Driver={Microsoft Access Driver (*.mdb, *.accdb)};'+ \\\n",
-    "                      'DBQ=C:\\\\sip\\\\SIP_Respaldo\\\\sip20200309.mdb;')\n",
+    "                      'DBQ=C:\\\\sip\\\\SIP_Vacia.mdb;')\n",
     "cursor = cnxn.cursor()"
    ]
   },
@@ -149,16 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pandas.read_csv('resultsSIP.csv', index_col = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc['AD363812']"
+    "df = pandas.read_csv('Output/results.csv', index_col = 0)"
    ]
   },
   {
