--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -354,21 +354,6 @@
    },
    "outputs": [],
    "source": [
-    "#Quality control\n",
-    "n = len(df)\n",
-    "for c in df.columns:\n",
-    "    if sum(df[c] != df[c])/n > .01 and not c.startswith('error'):\n",
-    "        print(c, sum(df[c] != df[c])/n )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
     "import parseMeasurementsByDay\n",
     "importlib.reload(parseMeasurementsByDay)\n",
     "measurements = {}\n",
@@ -396,11 +381,14 @@
     "    dfMeasurements = pandas.DataFrame(data = measurements[c], columns =['Campo', 'Fecha', 'Valor'])\n",
     "    dfMeasurements.Valor = dfMeasurements.Valor.map(lambda s: s.replace(',', '.') if isinstance(s, str) else s)\n",
     "    dfMeasurements.Valor = dfMeasurements.Valor.astype(float)\n",
-    "    dfValues =dfMeasurements.groupby('Campo')['Valor'].agg(['median', 'max', 'min'])\n",
-    "    for var, row in dfValues.iterrows():\n",
-    "        res[var + '_median'] = row.median()\n",
-    "        res[var + '_max'] = row.max()\n",
-    "        res[var + '_min'] = row.min()\n",
+    "    dfMeasurementsByDate = dfMeasurements.groupby('Fecha')\n",
+    "    for i, d in enumerate(dfMeasurementsByDate.groups):\n",
+    "        dfValues =dfMeasurementsByDate.get_group(d).groupby('Campo')['Valor'].agg(['median', 'max', 'min'])\n",
+    "        res['day_%d' % i] = d\n",
+    "        for var, row in dfValues.iterrows():\n",
+    "            res[var + '_median_day_%d' % i] = row.median()\n",
+    "            res[var + '_max_day_%d' % i] = row.max()\n",
+    "            res[var + '_min_day_%d' % i] = row.min()\n",
     "    resSIP[c].update(res)"
    ]
   },
@@ -433,6 +421,8 @@
    "source": [
     "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
     "importlib.reload(parseMedicaments)\n",
+    "importlib.reload(parseInterventions)\n",
+    "\n",
     "#Parse medicaments and interventions\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
     "    if len(p.registrosRecienNacido) > 1:\n",
@@ -446,6 +436,21 @@
     "    for k, v in i.items():\n",
     "        v = [vv[0] for vv in v]\n",
     "        resSIP[c].update(parseWithDictionary.parseWithDictionary(v, parseInterventions.actionIntervention))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
+    "\n",
+    "#Quality control\n",
+    "n = len(dfResSIP)\n",
+    "for c in dfResSIP.columns:\n",
+    "    if sum(dfResSIP[c] != dfResSIP[c])/n > .01 and not c.startswith('error'):\n",
+    "        print(c, sum(dfResSIP[c] != dfResSIP[c])/n )"
    ]
   },
   {
@@ -470,7 +475,7 @@
     "dfResSIP['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
     "dfResSIP['USUARIO'] = 'CMRC-AUTO'\n",
     "\n",
-    "dfResSIP.to_csv('resultsVenezolanas.csv')"
+    "dfResSIP.to_csv('Output/results.csv')"
    ]
   },
   {
@@ -479,7 +484,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfResSIP['MEOW']"
+    "dfResSIP.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
+    "renameDict = {k : v for  k, v in zip(dfNamesVars['Unnamed: 2'].values, dfNamesVars['Unnamed: 3'].values)}\n",
+    "\n",
+    "dfResSIP.columns = dfResSIP.columns.map(lambda s: s if s not in renameDict else renameDict[s])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groupedBy = dfNamesVars.groupby('Unnamed: 2')\n",
+    "for g in groupedBy.groups:\n",
+    "    if len(groupedBy.get_group(g)) == 1 or renameDict[g] not in dfResSIP:\n",
+    "        continue\n",
+    "    colname = renameDict[g]\n",
+    "    for (_, r) in groupedBy.get_group(g)[['Unnamed: 4', 'Unnamed: 5']].iterrows():\n",
+    "        option = r['Unnamed: 4']\n",
+    "        value = r['Unnamed: 5']\n",
+    "        dfResSIP.loc[dfResSIP[colname] == option, colname] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfResSIP.to_csv('Output/resultsPrettyName.csv')"
    ]
   },
   {
@@ -511,6 +554,17 @@
     "    for _, v in i.items():\n",
     "        for c, desc, _ in v:\n",
     "            allInterventions[c] = desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in allInterventions.items():\n",
+    "    if k not in parseInterventions.actionIntervention:\n",
+    "        print('actionIntervention[\"%s\"] = \"\" #%s' % (k, parsingDatabaseUtils.remove_diacritics(v)))\n"
    ]
   },
   {
