--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -21,7 +21,8 @@
     "import parsingDatabaseUtils, re, os\n",
     "import xml, itertools, collections, xml.etree.ElementTree as ET\n",
     "import tqdm, importlib, dateparser, dateparser.search\n",
-    "import parseMeasurementsByDay"
+    "import parseMeasurementsByDay\n",
+    "import pickle"
    ]
   },
   {
@@ -67,10 +68,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from parsingData.procedures import classificationProcedures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "with open('Data/notFoundInAutomatic.pkl', 'rb') as file:\n",
+    "    errors = pickle.load(file)"
    ]
   },
   {
@@ -91,7 +106,54 @@
    },
    "outputs": [],
    "source": [
-    "# Identify all  cases with an associated procedure"
+    "# Identify all  cases with an associated procedure\n",
+    "import difflib\n",
+    "def sameField(et1, et2, field, equal = lambda i, j: i == j):\n",
+    "    return equal(str(et1.find(field).text), str(et2.find(field).text))\n",
+    "\n",
+    "def similarTexts(s1, s2, th = .80):\n",
+    "    d =difflib.SequenceMatcher(a = s1, b = s2)\n",
+    "    r = sum((i.size for i in d.get_matching_blocks())) / min(len(s1), len(s2))\n",
+    "    return r > th\n",
+    "\n",
+    "def areSameIntervention(r1, r2):\n",
+    "    \"\"\"\n",
+    "    Decides if they are the same based on the type\n",
+    "    \"\"\"\n",
+    "    r1ET = ET.fromstring(r1.XmlDescripcion)\n",
+    "    r2ET = ET.fromstring(r2.XmlDescripcion)\n",
+    "\n",
+    "    #Date is the same / similar\n",
+    "    isDateSame = sameField(r1ET, r2ET, './/cabecera//fechaCirugia')\n",
+    "    # Type of intervention is the same\n",
+    "    isInterventionSame = sameField(r1ET, r2ET, './/idProcedimiento')\n",
+    "\n",
+    "    # Description\n",
+    "    isDescriptionSame = sameField(r1ET, r2ET, './/descripcion', equal = similarTexts)\n",
+    "    field = './/descripcion'\n",
+    "    return isInterventionSame and (isDateSame or  isDescriptionSame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "r1.FechaDescripcion, r2.FechaDescripcion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "errors"
    ]
   },
   {
@@ -107,7 +169,7 @@
     "checkSeveralProcedures = []\n",
     "unknownProc = []\n",
     "procsNotFound = []\n",
-    "for i,r  in tqdm.tqdm_notebook(registros.iterrows()):\n",
+    "for i,r  in  tqdm.tqdm_notebook(registros.loc[registros.CodigoRegistro == 145].iterrows(), total = len(registros)):\n",
     "    if isinstance(r.RegistroXML, str) and '<row NombreCampo=\"IdDescripcion\"' in r.RegistroXML:\n",
     "        et = ET.fromstring(r.RegistroXML)\n",
     "        idDescripcionProcedimiento = et.find('.//row[@NombreCampo=\"IdDescripcion\"]').get('ValorCampo')\n",
@@ -124,22 +186,156 @@
     "        if typeProc == 'p':\n",
     "            \n",
     "            #If it is the case that they need to stop labour because a c-section is needed\n",
-    "            if '<postDiagnosticoPrincipal>O821 - PARTO POR CESAREA DE EMERGENCIA</postDiagnosticoPrincipal>' in \\\n",
-    "                procedimientos.loc[idDescripcionProcedimiento].XmlDescripcion:\n",
-    "                continue\n",
+    "            #if '<postDiagnosticoPrincipal>O821 - PARTO POR CESAREA DE EMERGENCIA</postDiagnosticoPrincipal>' in \\\n",
+    "            #    procedimientos.loc[idDescripcionProcedimiento].XmlDescripcion:\n",
+    "            #    print('continue')\n",
+    "            #    continue\n",
     "                \n",
-    "            elif r.Caso in caseToProcedureBirths:\n",
+    "            if r.Caso in caseToProcedureBirths:\n",
     "                r1 = caseToProcedureBirths[r.Caso]\n",
     "                r2 =procedimientos.loc[idDescripcionProcedimiento]\n",
-    "                if r1.XmlDescripcion == r2.XmlDescripcion:\n",
-    "                    continue\n",
+    "                if areSameIntervention(r1, r2):\n",
+    "                    if r1.FechaDescripcion < r2.FechaDescripcion:\n",
+    "                        caseToProcedureBirths[r.Caso] = r2\n",
     "                else:\n",
-    "                    checkSeveralProcedures.append(r.Caso)\n",
-    "                    print('error, varios procedimientos en caso: ', r.Caso)\n",
+    "                    checkSeveralProcedures.append((r.Caso, caseToProcedureBirths[r.Caso],procedimientos.loc[idDescripcionProcedimiento] ))\n",
+    "                    procedureType2 = re.findall('<idProcedimiento>([a-zA-Z0-9]*)</idProcedimiento>', caseToProcedureBirths[r.Caso].XmlDescripcion)[0]\n",
+    "\n",
+    "                    print('error, varios procedimientos en caso: ', r.Caso, procedureType, procedureType2)\n",
     "                    if r1.FechaRegistro > r2.FechaRegistro:\n",
     "                        caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]\n",
     "            else:\n",
     "                caseToProcedureBirths[r.Caso] = procedimientos.loc[idDescripcionProcedimiento]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "birthCases = casos.loc[caseToProcedureBirths.keys()]\n",
+    "birthCases['dayOperation'] = birthCases.FechaHora.map(lambda s: datetime.datetime.strptime(s.split()[0], '%Y-%m-%d') if s == s else s)\n",
+    "birthCasesByDay = birthCases.groupby('dayOperation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "res = {}\n",
+    "for c in caseToProcedureBirths:\n",
+    "    if c in casos.index and str(casos.loc[c].Paciente) in pacientes.index:\n",
+    "        res[c] =  pacientes.loc[str(casos.loc[c].Paciente)].Identificacion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "dat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "cF = 0\n",
+    "cNF  = 0\n",
+    "incorrectId = []\n",
+    "for id, i, date in errors:\n",
+    "    i = i.strip()\n",
+    "    if id[-1] != '0':\n",
+    "        continue\n",
+    "    if i  in res.values() or 'VEN' + i  in res.values() or 'V' + i  in res.values():\n",
+    "        cF += 1\n",
+    "    elif i.replace('V', 'VEN') in res.values()  or i.replace('VEN', \"V\") in res.values():\n",
+    "        cF += 1\n",
+    "    elif i not in pacientes.index:\n",
+    "        if date in birthCasesByDay.groups:\n",
+    "            incorrectId.append((i, date))\n",
+    "    else:\n",
+    "        print(i)\n",
+    "        cNF += 1\n",
+    "print(cF, cNF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "cor = 0\n",
+    "incor = 0\n",
+    "for i, date in incorrectId:\n",
+    "    for p in pacientes.loc[map(lambda i: str(int(i)),birthCasesByDay.get_group(date).Paciente)].Identificacion:\n",
+    "        if similarTexts(i, p, th= .75):\n",
+    "            cor += 1\n",
+    "            print(i, p)\n",
+    "            break\n",
+    "    else:\n",
+    "        incor += 1\n",
+    "print(cor, incor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "print(len(incorrectId))\n",
+    "i, date = incorrectId[5]\n",
+    "#date = str(date).split()[0]\n",
+    "print(\"'\" + i + \"'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "for c, r1, r2 in checkSeveralProcedures:\n",
+    "    if areSameIntervention(r1, r2):\n",
+    "        print (c, 'same')\n",
+    "    else:\n",
+    "        print(c, 'Different')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "def hclin2pid(hClin):\n",
+    "    return pacientes.loc[pacientes.Identificacion == hClin].index[0]\n",
+    "hclin2pid(errors[60])"
    ]
   },
   {
@@ -185,6 +381,17 @@
     "                                                              pacientes,entriesInf)\n",
     "    if data.epicrisis is not None:\n",
     "        processedDatasets[c] = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "pp(processedDatasets['AD328171'].epicrisis.RegistroXML)"
    ]
   },
   {
@@ -311,7 +518,7 @@
     "count = 0\n",
     "for c, p in tqdm.tqdm_notebook(processedDatasets.items()):\n",
     "    if len(p.registrosRecienNacido) > 1:\n",
-    "        print('Warning! I still cannot handle twins')\n",
+    "        print(c, 'Warning! I still cannot handle twins')\n",
     "        continue\n",
     "    resSIP[c] = parsingDatabaseUtils.getMotherData(p)\n",
     "    resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getInformationFromProcedureDescription(p))\n",
@@ -416,7 +623,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from parsingData import parseInterventions, parseMedicaments, parseWithDictionary\n",
@@ -441,7 +650,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
@@ -481,7 +692,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "dfResSIP.columns"
@@ -490,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "dfNamesVars = pandas.read_excel('parsingData/variables_sip.xlsx')\n",
@@ -502,7 +717,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "groupedBy = dfNamesVars.groupby('Unnamed: 2')\n",
@@ -519,7 +736,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "dfResSIP.to_csv('Output/resultsPrettyName.csv')"
@@ -539,7 +758,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "allMedicaments = {}\n",
@@ -559,7 +780,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "for k, v in allInterventions.items():\n",
@@ -570,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "with open('parseMedicaments.py', 'w') as f:\n",
@@ -587,7 +812,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "parseMedicamentsInterventionsByDay(parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et))"
@@ -596,7 +823,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "et = ET.fromstring(p.epicrisis.RegistroXML)\n",
@@ -975,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
